--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -9,7 +9,7 @@ body {
   width: 100%;
   height: 5rem;
 }
-.header .main_logo {
+.header_logo {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -17,7 +17,7 @@ body {
   align-items: center;
   border: #020101 solid thin;
 }
-.header .main_logo .header_pict {
+.header_logo_pict {
   height: 80%;
   width: 100%;
   border: grey solid thin;
@@ -26,13 +26,13 @@ body {
 .section_1 {
   width: 100%;
 }
-.section_1 .s1_1 {
+.section_1_1 {
   width: 100%;
   height: 4rem;
   background-color: #e2e2e2;
   display: flex;
 }
-.section_1 .s1_1 .s1_1_map {
+.section_1_1_map {
   width: 100%;
   height: 100%;
   display: flex;
@@ -40,13 +40,13 @@ body {
   align-items: center;
   margin-right: 1rem;
 }
-.section_1 .s1_1 .s1_1_map .map_marker {
+.section_1_1_map i {
   width: 1rem;
   height: 1rem;
   margin: 0 2.5% 1% 0;
   color: #2e2e2e;
 }
-.section_1 .s1_2 {
+.section_1_2 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -55,21 +55,21 @@ body {
   background-color: #f8f6f6;
   border: blueviolet thin solid;
 }
-.section_1 .s1_2 .s1_2_title {
+.section_1_2_title {
   width: 60%;
   display: flex;
   text-align: center;
   height: 30%;
   border: hotpink solid thin;
 }
-.section_1 .s1_2 .s1_2_subtitle {
+.section_1_2_subtitle {
   width: 60%;
   display: flex;
   text-align: center;
   height: 25%;
   border: hotpink solid thin;
 }
-.section_1 .s1_2 .s1_2_button {
+.section_1_2_button {
   width: 40%;
   display: flex;
   justify-content: center;
@@ -77,7 +77,7 @@ body {
   margin-top: 4%;
   border: hotpink solid thin;
 }
-.section_1 .s1_2 .s1_2_button .button {
+.section_1_2_button_b {
   border-radius: 30px;
   width: 100%;
   height: 100%;
@@ -90,11 +90,11 @@ body {
   width: 100%;
   height: 18rem;
 }
-.section_2 .s2_1 {
+.section_2_1 {
   width: 100%;
   height: 18%;
 }
-.section_2 .s2_2 {
+.section_2_2 {
   border: solid blue;
   width: 100%;
   height: 82%;
@@ -104,7 +104,7 @@ body {
   align-items: center;
   justify-content: space-between;
 }
-.section_2 .s2_2 .s2_2_card {
+.section_2_2_card {
   display: flex;
   width: 95%;
   height: 24%;
@@ -114,27 +114,74 @@ body {
   align-items: center;
   border: red solid thin;
 }
-.section_2 .s2_2 .s2_2_card .s2_2_num {
+.section_2_2_card_num {
   background-color: #9356DC;
   border-radius: 50px;
   padding: 1% 2% 1% 2%;
   color: white;
 }
-.section_2 .s2_2 .s2_2_card .s2_2_icon {
-  border: yellowgreen solid thin;
-}
-.section_2 .s2_2 .s2_2_card .s2_2_icon .mimi {
-  height: 1rem;
-  width: 1rem;
-  color: grey;
-}
 
-.s3_2_Pictures {
+.section_3 {
+  width: 100%;
+  height: 110rem;
+  margin: 0;
+  border: tomato solid;
+}
+.section_3_1 {
+  width: 100%;
+  height: 5%;
+  margin-left: 2%;
+}
+.section_3_2 {
+  width: 100%;
+  height: 94%;
+  margin: 0;
+  border: brown solid thin;
+}
+.section_3_2_cards {
+  width: 100%;
+  border: solid #0508d4 thin;
+  height: 25%;
+  display: flex;
+  margin: 0;
+  justify-items: center;
+}
+.section_3_2_cards_1 {
+  width: 90%;
   height: 100%;
-  width: 95%;
+  margin: 0;
+  border: #0dee2b solid thin;
+}
+.section_3_2_cards_1_pict {
+  width: 100%;
+  height: 70%;
+  border: black solid thin;
+}
+.section_3_2_cards_1_pict_1 {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.section_3_2_cards_1_legend {
+  width: 100%;
+  display: flex;
+}
+.section_3_2_cards_1_legend_text {
+  width: 75%;
+  height: 100%;
+}
+.section_3_2_cards_1_legend_text_title {
+  width: 100%;
+}
+.section_3_2_cards_1_legend_text_subtitle {
+  width: 100%;
+}
+.section_3_2_cards_1_legend_heart {
+  width: 25%;
+  height: 100%;
 }
 
-.card_icon {
+i {
   height: 1rem;
   width: 1rem;
 }
