--- a/Sass/Style.scss
+++ b/Sass/Style.scss
@@ -16,14 +16,14 @@ body{
 .header{
     width: 100%;
     height: 5rem;
-        .main_logo{
+        &_logo{
             width: 100%;
             display: flex;
             justify-content: center;
             align-content: center;
             align-items: center;
             border: rgb(2, 1, 1) solid thin;
-                .header_pict{
+                &_pict{
                     height: 80%;
                     width: 100%;
                     
@@ -33,32 +33,32 @@ body{
 }
 .section_1{
     width: 100%;
-    .s1_1{ 
-        width: 100%;
-        height: 4rem;
-        background-color: $background-color-1;
-        display:flex;
-
-        .s1_1_map{
+        &_1{ 
             width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items:center;
-            margin-right: 1rem;
+            height: 4rem;
+            background-color: $background-color-1;
+            display:flex;
+
+                 &_map{
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items:center;
+                    margin-right: 1rem;
             
-                .map_marker{
-                    width: 1rem;
-                    height: 1rem;
-                    margin: 0 2.5% 1% 0;
-                    color: rgb(46, 46, 46);
+                        i{
+                        width: 1rem;
+                        height: 1rem;
+                        margin: 0 2.5% 1% 0;
+                        color: rgb(46, 46, 46);
                     
                 }
 
         }
         
     }
-    .s1_2{
+    &_2{
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -67,28 +67,28 @@ body{
         background-color: $background-color-2;
         border: blueviolet thin solid; 
 
-            .s1_2_title{
+            &_title{
                 width: 60%;
                 display: flex;
                 text-align: center;
                 height: 30%;
                 border: hotpink solid thin;
             }
-            .s1_2_subtitle{
+            &_subtitle{
                 width: 60%;
                 display: flex;
                 text-align: center;
                 height: 25%;
                 border: hotpink solid thin;
             }
-            .s1_2_button{
+            &_button{
                 width: 40%;
                 display: flex;
                 justify-content: center;
                 height: 18%;
                 margin-top: 4%;
                 border: hotpink solid thin;
-                    .button{
+                    &_b{
                         border-radius: 30px;
                         width: 100%;
                         height: 100%;
@@ -104,11 +104,11 @@ body{
 .section_2{
     width: 100%;
     height: 18rem;
-        .s2_1{
+        &_1{
             width: 100%;
             height: 18%;
         }
-        .s2_2{
+        &_2{
             border: solid blue;
             width: 100%;
             height: 82%;
@@ -117,7 +117,7 @@ body{
             flex-direction: column;
             align-items: center;
             justify-content: space-between;
-                .s2_2_card{
+                &_card{
                     display: flex;
                     width: 95%;
                     height: 24%;
@@ -126,20 +126,13 @@ body{
                     border-radius: 20px;
                     align-items: center;
                     border: red solid thin;
-                        .s2_2_num{
+                        &_num{
                              background-color: $primary_color;
                              border-radius: 50px;
                              padding: 1% 2% 1% 2%;
                              color: white;
                         }
-                        .s2_2_icon{
-                            border: yellowgreen solid thin;
-                            .mimi{
-                                height: 1rem;
-                                width: 1rem;
-                                color: grey
-                            }
-                        }
+                       
 
                       
                 }
@@ -147,12 +140,69 @@ body{
 
 }
 
+.section_3{
+    width: 100%;
+    height: 110rem;
+    margin: 0;
+    border: tomato solid;
+        &_1{
+            width: 100%;
+            height: 5%;
+            margin-left: 2%;
 
-.s3_2_Pictures{
-    height: 100%;
-    width: 95%;
+        }
+        &_2{
+            width: 100%;
+            height: 94%;
+            margin: 0;
+            border: brown solid thin;
+                &_cards{
+                    width: 100%;
+                    border: solid rgb(5, 8, 212) thin;
+                    height: 25%;
+                    display: flex;
+                    margin: 0;
+                    justify-items: center;
+                    
+                        &_1{
+                            width: 90%;
+                            height: 100%;
+                            margin: 0;
+                            border: rgb(13, 238, 43) solid thin;
+                                &_pict{
+                                    width: 100%;
+                                    height: 70%;
+                                    border: black solid thin;
+                                        &_1{
+                                            width: 100%;
+                                            height: 100%;
+                                            object-fit: cover;
+                                        }
+                                }
+                                &_legend{
+                                    width: 100%;
+                                    display: flex;
+                                        &_text{
+                                            width: 75%;
+                                            height: 100%;
+                                                &_title{
+                                                    width: 100%;
+                                                }
+                                                &_subtitle{
+                                                    width: 100%;
+                                                }
+                                        }
+                                        &_heart{
+                                            width: 25%;
+                                            height: 100%;
+                                        }
+                                }
+                        }
+                }
+        }
 }
-.card_icon{
+
+i{
     height: 1rem;
     width: 1rem;
 }
