--- a/Sass/Style.scss
+++ b/Sass/Style.scss
@@ -2,11 +2,12 @@
 $primary_color:#9356DC;
 $secondary_color:#FF79DA;
 $third_color: #99E2D0;
-$background-color-1:rgb(226, 226, 226);
-$background-color-2: rgb(248, 246, 246);
+$background-color-1:#EAEAEA;
+$background-color-2: #F6F6F6;
+$background-color-footer:#353535;
 
 
-body{ 
+.Home{ 
     width: 100%;
     height: fit-content;
     margin: 0;
@@ -25,26 +26,40 @@ body a{
     height: 5rem;
         &_logo{
             width: 100%;
+            height: 100%;
             display: flex;
             justify-content: center;
-            align-content: center;
             align-items: center;
             border: rgb(2, 1, 1) solid thin;
                 &_pict{
-                    height: 80%;
-                    width: 100%;
+                    height: 2rem;
+                    width: 11rem;
+                    border: tomato thin solid;
                     
-                    border: grey solid thin;
                 }
+        }
 }
+input{
+    width:9rem;
+    height: 2rem;
+    border:none;
+    background-color: $background-color-1;
+    font-weight: 600;
+    font-size: 1rem;
+    
 }
 .section_1{
     width: 100%;
         &_1{ 
             width: 100%;
-            height: 4rem;
+            height: 3rem;
             background-color: $background-color-1;
+            border: red solid;
+            justify-items: center;
             display:flex;
+            justify-content: center;
+            box-shadow: rgb(190, 189, 189) 10px 10px 10px;
+            
 
                  &_map{
                     width: 100%;
@@ -52,13 +67,12 @@ body a{
                     display: flex;
                     justify-content: center;
                     align-items:center;
-                    margin-right: 1rem;
+                    border: orange solid thin;
             
                         i{
-                        width: 1rem;
-                        height: 1rem;
                         margin: 0 2.5% 1% 0;
                         color: rgb(46, 46, 46);
+                        font-size: 1.2rem;
                     
                 }
 
@@ -75,33 +89,37 @@ body a{
         border: blueviolet thin solid; 
 
             &_title{
-                width: 60%;
+                width: 75%;
                 display: flex;
                 text-align: center;
                 height: 30%;
-                border: hotpink solid thin;
+                font-weight: bolder;
+                border: rgb(5, 4, 4) solid thin;
             }
             &_subtitle{
-                width: 60%;
+                width: 80%;
                 display: flex;
                 text-align: center;
                 height: 25%;
                 border: hotpink solid thin;
             }
             &_button{
-                width: 40%;
+                width: 60%;
                 display: flex;
                 justify-content: center;
-                height: 18%;
+                height: 22%;
                 margin-top: 4%;
                 border: hotpink solid thin;
                     &_b{
                         border-radius: 30px;
                         width: 100%;
                         height: 100%;
-                        font-size:bold;
+                        font-size:0.9rem;
+                        font-weight: bold;
+                        border: none;
+                        box-shadow: rgb(204, 202, 202) 5px 5px 5px;
                         color: white;
-                        background-color: $primary_color;
+                        background: linear-gradient(to bottom right, $secondary_color, $primary_color)
                     }
 
             }
@@ -114,6 +132,8 @@ body a{
         &_1{
             width: 100%;
             height: 18%;
+            margin-left: 3%;
+            font-weight: bolder;
         }
         &_2{
             border: solid blue;
@@ -126,22 +146,56 @@ body a{
             justify-content: space-between;
                 &_card{
                     display: flex;
-                    width: 95%;
-                    height: 24%;
-                    justify-content: center;
+                    width: 90%;
+                    height: 28%;
                     background-color: $background-color-2;
                     border-radius: 20px;
-                    align-items: center;
+                    box-shadow: rgb(204, 202, 202) 5px 5px 5px;
                     border: red solid thin;
+                        &_s{
+                            border: grey thin solid;
+                            width: 82%;
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            position: relative;
+                            right:0.8rem;
                         &_num{
                              background-color: $primary_color;
                              border-radius: 50px;
-                             padding: 1% 2% 1% 2%;
+                             padding: 1.2% 2.8% 1.2% 2.8%;
                              color: white;
                         }
                        
+                        &_icon i, &_icon1 i, &_icon2 i{
+                            color: grey;
+
+                        }
+                        &_icon1 i {
+                            font-size: 1.4rem;
+                            position: relative;
+                            left: 0.3rem;
+                        }
+                        &_icon2 i {
+                            position: relative;
+                            left: 0.1rem;
+                        }
+                        &_text p, &_text1 p{ 
+                            font-weight: bolder;
+                            font-size: 1.05rem;
+                        }
+                        &_text1{
+                            position: relative;
+                            right: 0.5rem;
+                        }
+                        
+                    }  
 
                       
+                }
+                &_card:hover{
+                    background-color: #F5EDFF;
+                                        
                 }
         }
 
@@ -149,40 +203,56 @@ body a{
 
 .section_3{
     width: 100%;
-    height: 110rem;
-    margin: 0;
+    height: 80rem;
+    margin-top: 10%;
     border: tomato solid;
         &_1{
             width: 100%;
-            height: 4%;
-            margin-left: 2%;
+            height: 7%;
+            display: flex;
+            align-items: center;
+            background-color: $background-color-2;
+            
+                &_title{
+                    height: 50%;
+                    margin: 0 0 2% 3%;
+                    border: #9356DC solid;
+                }
+            
 
         }
         &_2{
             width: 100%;
-            height: 96%;
+            height: 93%;
             margin: 0;
+            background-color: $background-color-2;
             border: brown solid thin;
                 &_cards{
                     width: 100%;
                     border: solid rgb(5, 8, 212) thin;
-                    height: 23%;
+                    height: 22%;
                     display: flex;
                     margin-bottom: 5%;
                     justify-items: center;
                     
+                    
                         &_1{
                             width: 90%;
-                            height: 100%;
-                            margin: 0 5% 0% 5%;
+                            height: 90%;
+                            margin: 2% 0 0 4.2%;
+                            border-radius: 20px;
+                            background-color: white;
+                            box-shadow: rgb(221, 220, 220) 5px 5px 5px;
                             border: rgb(13, 238, 43) solid thin;
                                 &_pict{
-                                    width: 100%;
+                                    width: 99%;
                                     height: 70%;
                                     border: black solid thin;
                                         &_1{
                                             width: 100%;
                                             height: 100%;
+                                            border-top-left-radius: 20px;
+                                            border-top-right-radius: 20px;
                                             object-fit: cover;
                                         }
                                 }
@@ -193,12 +263,30 @@ body a{
                                         &_text{
                                             width: 75%;
                                             height: 100%;
+                                            display: flex;
+                                            flex-direction: column;
                                             border: thin orange solid;
                                                 &_title{
                                                     width: 100%;
+                                                    height: 45%;
+                                                    display: flex;
+                                                    align-items:flex-start;
+                                                    position: relative;
+                                                    bottom: 9%;
+                                                    left: 5%;
+                                                    border: red solid thin;
+                                                    
+                                                    
                                                 }
                                                 &_subtitle{
                                                     width: 100%;
+                                                    height: 40%;
+                                                    display: flex;
+                                                    align-items:center;
+                                                    position: relative;
+                                                    bottom: 6%;
+                                                    left: 5%;
+                                                    border: red solid thin;
                                                 }
                                         }
                                         &_heart{
@@ -212,7 +300,10 @@ body a{
                                                    border: orangered thin solid;
                                                    height: 30%;
                                                    width: 30%;
-                                                   font-size: 140%;
+                                                   font-size: 160%;
+                                                   color: rgb(66, 65, 65);
+                                                   position: relative;
+                                                   bottom: 0.4rem;
                                                    
                                                 }
                                         }
@@ -228,13 +319,13 @@ footer a{
 }
 .foot{
     width: 100%;
-    height: 20rem;
+    height: 18rem;
     border: solid springgreen thin;
-    background-color: rgb(48, 47, 47);
+    background-color: $background-color-footer;
     color: white;
         &_logo{
             width: 100%;
-            height: 20%;
+            height: 25%;
                 &_ohmyfood{
                     background-color: transparent;
                     width: 35%;
@@ -245,7 +336,7 @@ footer a{
         }
         &_list{
             width: 100%;
-            height: 80%;
+            height: 75%;
                 &_icon{
                     margin-right: 2%;
                 }
@@ -262,10 +353,98 @@ footer a{
             list-style: none;
             display: flex;
             align-items: center;
+            height: 2.2rem;
             border: olive thin solid;
             
         }
     
 
         
+}
+
+@mixin Borderx {
+    border: black solid thin;
+    
+}
+
+.R1{
+    width: 100%;
+    height: fit-content;
+    margin: 0;
+    border: $background-color-footer solid;
+        &-header{
+            width: 100%;
+            margin: 0;
+            height: 3rem;
+            border: springgreen solid thin;
+            display: flex;
+            justify-content: space-between;
+                &-b1{
+                    @include Borderx;
+                    width: 10%; 
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;                  
+                }
+                &-b1 i{
+                    color: #353535
+                }
+                &-b1 i:hover{
+                    color: #9356DC
+                }
+                &-b2{
+                    @include Borderx; 
+                    width: 70%;
+                    display: flex;
+                    align-items: center;
+                        &-pict{
+                            height: 1.5rem;
+                            width: 8rem;
+                        }
+
+                }
+
+
+        }
+     &-menu{
+         width: 100%;
+         margin: 0;
+            &-header{
+                width: 100%;
+                    &-pict{
+                        width: 100%;
+                        object-fit: cover;
+                    }
+
+            }
+            &-carte{
+                width: 100%;
+                    &-title{
+                        @include Borderx;
+                        width: 100%;
+                        display: flex;
+                        justify-content: space-between;
+                        border-top-left-radius: 20px;
+                        border-top-right-radius: 20px;
+                            &-text{
+                                @include Borderx;
+                                width: 80%;
+                                margin-left: 5%;
+                            }
+                            &-heart{
+                                @include Borderx;
+                                width: 20%;
+                                    i{
+                                    color:rgb(43, 43, 43);
+                                    font-size: 140%;
+                                    position: relative;
+                                    top:35%;
+                                    left:32%;
+                                }
+                            }
+                           
+
+                    }
+            }
+     }   
 }
