--- a/Sass/Utils/_Animation.scss
+++ b/Sass/Utils/_Animation.scss
@@ -11,12 +11,17 @@
 .loader {
   position: fixed;
   top: 0;
-  left: 0;
+  left: 0px; 
   width: 100%;
   height: 100%;
   background-color: white;
   z-index: 10;
-  animation: loader 1s forwards;
+  animation: loader 3s forwards;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 @keyframes loader {
   0% {
@@ -36,7 +41,10 @@
   top: 0;
   bottom: 0;
   right: 0;
-  left: 0;
+  left: 0px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
 .loader .lettre {
   font-size: 30px;
@@ -65,14 +73,10 @@
   }
 }
 
-.loader{
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
   
-}
+  
+
 .chargement{
 width: 100%;
 }
@@ -210,6 +214,8 @@ width: 100%;
     transform: rotate(360deg);
 }
 }
+
+
 
 
 
