--- a/Sass/Pages/_home_page.scss
+++ b/Sass/Pages/_home_page.scss
@@ -4,7 +4,6 @@
     height: fit-content;
     margin: 0;
     font-family: "roboto", sans-serif;
-    border: black solid;
   }
   a {
     text-decoration: none;
@@ -54,7 +53,7 @@
         justify-content: center;
         align-items: center;
   
-        i {
+        .fa-map-marker-alt {
           margin: 0 2.5% 1% 0;
           color: rgb(46, 46, 46);
           font-size: 1.2rem;
@@ -88,29 +87,31 @@
         width: 60%;
         display: flex;
         justify-content: center;
-        height: 22%;
-        margin-top: 4%;
-        & :hover {
-          filter: opacity(80%);
-          filter: brightness(110%);
-          box-shadow: 0px 2px 17px 5px rgba(79, 79, 79, 0.32);
-          cursor: pointer;
-        }
+        height: 100%;
+        
+        display: flex;
+        align-items: center;
+       
   
-        &_b {
+        &_b{
           border-radius: 30px;
-          width: 100%;
           height: 100%;
           font-size: 0.9rem;
+          padding: 5% 5% 5% 5%;
           font-weight: bold;
+          outline: none;
           border: none;
           box-shadow: 0px 4px 17px 2px rgba(79, 79, 79, 0.26);
           color: white;
           background: linear-gradient(
             to bottom right,
             $secondary_color,
-            $primary_color
-          );
+            $primary_color);
+           
+            
+           
+            
+          
         }
       }
     }
@@ -143,7 +144,7 @@
         &:hover {
           background-color: #f5edff;
           cursor: pointer;
-          .fas {
+          .fa-mobile-alt, .fa-list-ul, .fa-store  {
             color: $primary_color;
           }
         }
@@ -295,14 +296,16 @@
       }
     }
 
-    .fa-heart{
+   .section_3_2_cards_1_legend_heart :nth-child(2){ 
       position: absolute;
       opacity: 0;
-      color: chocolate;
+      background: -webkit-gradient(linear, left top, left bottom, from($primary_color), to($secondary_color));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
       font-size: 130%;
     }
     .far{
-      color: rgb(71, 71, 71);
+      color: rgb(119, 117, 117);
       font-size: 130%;
       opacity: 1;
     }
@@ -310,6 +313,7 @@
   .new, .new1{
     height: 14%;
     width: 22%;
+    min-width: 4rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -346,7 +350,7 @@
     }
     &_list {
       width: 100%;
-      height: 75%;
+      
       &_icon {
         margin-right: 2%;
       }
@@ -354,7 +358,7 @@
         margin-right: 50%;
         font-size: 1rem;
       }
-      &_icon .fas, .far{
+      &_icon .fa-utensils, .fa-handshake{
         color: white;
           }
       
