--- a/Sass/Responsive/_Tablet_MQ.scss
+++ b/Sass/Responsive/_Tablet_MQ.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    width: 100%;
   }
   .section_1 {
     width: 85%;
@@ -16,6 +17,7 @@
       border-bottom-right-radius: 30px;
       &_button_b {
         width: 70%;
+        height: 3rem;
       }
     }
   }
@@ -45,17 +47,15 @@
           height: 13rem;
         }
         &_1_legend_text_title h3 {
-          font-size: 115%;
+          font-size: 100%;
         }
         &_1_legend_text_subtitle p {
-          font-size: 110%;
+          font-size: 100%;
         }
       }
     }
   }
-  .new{
-    
-  }
+
   .foot {
     height: 12rem;
     &_logo{
